Compile on JDK 11 / Maven 3.0.5